--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "autoprefixer": "^8.0.0",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
+    "gh-pages": "^1.1.0",
     "jest": "^22.4.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
